# langchain_practice

./: .gitignore  README.md  langchain-aam-zindagi.ipynb  langchain-mentos-zindagi.ipynb  model_call.py  pyproject.toml  requirements.txt  research_summary_template.json  test.ipynb  test.json
1.LLMS/: 1_llm_demo.py
2.CHATMODELS/: 1_chatmodel_openai.py  2_chatmodel_claude.py  3_chatmodel_gemini.py  4_chatmodel_hf_api.py  5_chatmodel_hf_local.py
3.Embedded Models/: 1_embedding_openai_query.py  2_embedding_openai_docs.py  3_embedding_hf_local.py  4_document_similarity.py
6.Langchain_Output_parsers/: stroutpuparser.py
7.Langchain_chains/: conditional_chain.py
LANGCHAIN_PROMPTS/: prompt_generator.py  prompt_ui.py
LANGCHAIN_Runnables/: LCEL.py  runnable_branch.py  runnable_equence.py  runnable_lambda.py  runnable_parallel.py  runnable_passthrough.py
LANGCHAIN_STRUCTURED_OUTPUT/: pydantic_demo.py  with_structured_output_json.py  with_structured_output_pydantic.py  with_structured_output_typed.py
Langcahin-Runnables/: RetrievarQAChain.py  llmchain.py  pdf_reader.py  simple_llm_app.py
Langchain_Output_parsers/: jsonoutputparser.py  pydanticoutputparsers.py  stroutputparser.py  structuredoutputparser.py
Langchain_chains/: parallel_chain.py  sequential_chain.py  simple_chain.py
chatbot/: chat_history.txt  chat_prompt_template.py  chatbot.py  message_placeholder.py  messages.py
